# vacancies_search

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
notebooks/: faiss.ipynb  sbert_rus.ipynb
src/app/: Format.py  ResumesFormat.py  VacanciesFormat.py  __init__.py  states_config.py
src/app/data/: Resume.py  Vacancy.py  __init__.py
src/app/views/: ColumnsView.py  ResumeTabView.py  TabView.py  VacancyTabview.py  __init__.py
src/ml/: create_vector_db.py  documents.py  embeddings.py  init_vector_db.py  recommendations.py
tests/: test.py
