[tool.poetry]
name = "vacancies-search"
version = "0.1.0"
description = ""
authors = ["Tatiana Maslennikova <tanyamaslennikova24@mail.ru>"]
readme = "README.md"
packages = [{include = "vacancies_search", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
openpyxl = "^3.1.2"
langchain = "^0.0.335"
elasticsearch = "^8.7.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
tiktoken = "^0.3.3"
sentence-transformers = "^2.2.2"
torch = { version = "1.13.1", source = "torch-cuda-11-6" }
playwright = "^1.39.0"
faiss-cpu = "^1.7.4"
notebook = "^7.0.6"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cuda-11-6"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
